--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Helping Canadians make informative decisions about their finances with a simple, easy to use, and free tool."
     />
     <link rel="apple-touch-icon" href="./logo.jpeg" />
+    <script src="https://kit.fontawesome.com/e9dfb007ad.js" crossorigin="anonymous"></script>
     <link rel="manifest" href="./logo.jpeg" />
     <title>myPlanwise</title>
   </head>
